Issue #13018: Fix reference leaks in error paths in dictobject.c. Patch by Suman Saha.